Add some components

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,8 +1,4 @@
-<div class="post">
-  <h2>Post title</h2>
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-    consectetur labore aut blanditiis nobis voluptatibus quibusdam, magni
-    cupiditate. Numquam, exercitationem.
-  </p>
+<div class="card">
+  <h2>{{ post.title }}</h2>
+  <p>{{ post.text }}</p>
 </div>
