added remove post button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,9 @@
 
   <hr />
 
-  <app-post *ngFor="let p of posts" [post]="p"></app-post>
+  <app-post
+    *ngFor="let p of posts"
+    [post]="p"
+    (onRemove)="removePost($event)"
+  ></app-post>
 </div>
