--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,4 +1,5 @@
 <div class="card">
   <h2>{{ post.title }}</h2>
   <p>{{ post.text }}</p>
+  <button class="btn" (click)="removePost()">&times;</button>
 </div>
