--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <h1>Angular Components</h1>
 
-  <app-post-form (onAdd)="updatePosts($event)"></app-post-form>
+  <app-post-form (addPos)="updatePosts($event)"></app-post-form>
 
   <hr />
 
   <app-post
     *ngFor="let p of posts"
     [post]="p"
-    (onRemove)="removePost($event)"
+    (removePos)="removePost($event)"
   ></app-post>
 </div>
